--- a/index.html
+++ b/index.html
@@ -1,11 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>StreetSounds</title>
-	<style type="text/css" src="styles.css"></style>
+	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="http://d2v52k3cl9vedd.cloudfront.net/bassdock/1.2.1/bassdock.min.css">
+    <link rel="stylesheet" href="http://d2v52k3cl9vedd.cloudfront.net/vhs/0.1.0/vhs.min.css">
+    
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script> 
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
+	<script type="text/javascript" src="plangular.js"></script>
 	<script type="text/javascript" src="app.js"></script>
+	
 </head>
-<body>
-Hello World
+<body ng-app="streetsounds">
+<div plangular class="mb3 bg-darken-2 rounded">
+  <div class="p2 bg-gray">
+  	<div class="center">
+      <h4 class="m0 flex-auto">StreetSounds</h4>
+  	</div>
+  </div>
+  <div style="min-height: 200px; background-image: url('{{track.artwork_url || 'http://i.telegraph.co.uk/multimedia/archive/01216/g3_1216052i.jpg'}}'); background-size: contain; background-position: center center; background-repeat: no-repeat;"></div>
+  <div class="p2">
+    <div class="flex flex-center">
+      <h4 class="m0 caps flex-auto">{{playlist.title}}</h4>
+      <samp class="h6">{{ currentTime | hhmmss }} / {{ duration | hhmmss }}</samp>
+    </div>
+    <h3 class="h2 mt1">{{track.title}}</h3>
+    <div class="flex flex-center">
+      <button class="flex-none h3 button button-narrow button-transparent button-grow rounded"
+        title="Play Previous Track"
+        ng-click="previous()">
+        <svg class="icon geomicon" data-icon="previous" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 H8 V14 L28 4 V28 L8 18 V28 H4 z "></path></svg>
+      </button>
+      <button class="flex-none h1 button button-transparent button-grow rounded"
+        title="Play/Pause"
+        ng-click="playPause(index)">
+        <svg ng-if="player.playing !== track.src" class="icon geomicon" data-icon="play" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor"><path d="M4 4 L28 16 L4 28 z "></path></svg>
+        <svg ng-if="player.playing === track.src" class="icon geomicon" data-icon="pause" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor"><path d="M4 4 H12 V28 H4 z M20 4 H28 V28 H20 z "></path></svg>
+      </button>
+      <button class="flex-none h3 button mr2 button-narrow button-transparent button-grow rounded"
+        title="Play Next Track"
+        ng-click="next()">
+        <svg class="icon geomicon" data-icon="next" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 L24 14 V4 H28 V28 H24 V18 L4 28 z "></path></svg>
+      </button>
+      <progress
+        class="progress"
+        ng-click="seek($event)"
+        ng-value="currentTime / duration || 0">
+        {{ currentTime / duration }}
+      </progress>
+      <button id="refresh" class="flex-none h3 button ml2 button-narrow button-transparent button-grow rounded"
+        style="padding: 1rem;"
+        title="Refresh"
+        ng-click="refreshLocation()">
+        <svg class="icon geomicon" data-icon="refresh" viewBox="0 0 32 32" style="fill:currentcolor; top:0;"><path d="M16 2 A14 14 0 0 0 2 16 A14 14 0 0 0 16 30 A14 14 0 0 0 26 26 L 23.25 23 A10 10 0 0 1 16 26 A10 10 0 0 1 6 16 A10 10 0 0 1 16 6 A10 10 0 0 1 23.25 9 L19 13 L30 13 L30 2 L26 6 A14 14 0 0 0 16 2 "></path></svg>
+      </button>
+    </div>
+  </div>
+  <ul class="list-reset" style="max-height: 300px; overflow-y: scroll;">
+    <li ng-repeat="track in tracks" ng-if="track.duration < 300000">
+      <button
+        class="flex flex-center full-width left-align button button-transparent"
+        title="Play {{track.title}}"
+        ng-class="{'is-active': player.playing === track.src }"
+        ng-click="playPause($index)">
+        <span class="flex-auto">
+          {{track.user.username}} - {{track.title}}
+        </span>
+        <span class="h6">
+          {{ track.duration / 1000 | hhmmss }}
+        </span>
+      </button>
+    </li>
+  </ul>
+</div>
 </body>
 </html>
