--- a/index.html
+++ b/index.html
@@ -5,45 +5,50 @@
 	<title>StreetSounds</title>
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="http://d2v52k3cl9vedd.cloudfront.net/bassdock/1.2.1/bassdock.min.css">
-    <link rel="stylesheet" href="http://d2v52k3cl9vedd.cloudfront.net/vhs/0.1.0/vhs.min.css">
-    
+  <link rel="stylesheet" href="http://d2v52k3cl9vedd.cloudfront.net/vhs/0.1.0/vhs.min.css">
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script> 
+	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script> 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
 	<script type="text/javascript" src="plangular.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 	
 </head>
-<body ng-app="streetsounds">
-<div plangular class="mb3 bg-darken-2 rounded">
-  <div class="p2 bg-gray">
-  	<div class="center">
-      <h4 class="m0 flex-auto">StreetSounds</h4>
+<body ng-app="streetsounds" style="overflow-y: hidden;">
+<div plangular class="mb3 rounded">
+  <div class="p2 bg-black white">
+  	<div class="flex flex-center">
+      <h4 class="brand m0 flex-auto">StreetSounds</h4>
+      <input ng-model="search" class="mb0 mr2 field-light" style="padding:0.5em;" googleplace/>
+      <button class="flex-none button"
+        title="Search Location"
+        ng-click="searchLocation()">
+        <svg class="icon geomicon" data-icon="search" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M12 0 A12 12 0 0 0 0 12 A12 12 0 0 0 12 24 A12 12 0 0 0 18.5 22.25 L28 32 L32 28 L22.25 18.5 A12 12 0 0 0 24 12 A12 12 0 0 0 12 0 M12 4 A8 8 0 0 1 12 20 A8 8 0 0 1 12 4  "></path></svg>
+      </button>
   	</div>
   </div>
-  <div ng-style="{'background-image': 'url(http://farm'+photo.farm+'.staticflickr.com/'+photo.server+'/'+photo.id+'_'+photo.secret+'.jpg)'}" style="min-height: 200px; background-size: contain; background-position: center center; background-repeat: no-repeat;"></div>
-  <div class="p2">
+  <div ng-style="{'background-image': 'url(http://farm'+photo.farm+'.staticflickr.com/'+photo.server+'/'+photo.id+'_'+photo.secret+'.jpg)'}" style="min-height: 265px; background-size: 110%; background-position: center center; background-repeat: no-repeat;"></div>
+  <div class="p2 bg-darken-2">
     <div class="flex flex-center">
       <h4 class="m0 caps flex-auto">{{playlist.title}}</h4>
       <samp class="h6">{{ currentTime | hhmmss }} / {{ duration | hhmmss }}</samp>
     </div>
     <h3 class="h2 mt1">{{track.title}}</h3>
-    <div class="flex flex-center">
+    <div class="flex flex-center bg-white">
       <button class="flex-none h3 button button-narrow button-transparent button-grow rounded"
         title="Play Previous Track"
         ng-click="previous()">
-        <svg class="icon geomicon" data-icon="previous" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 H8 V14 L28 4 V28 L8 18 V28 H4 z "></path></svg>
+        <svg class="icon geomicon" data-icon="previous" viewBox="0 0 32 32" style="fill:currentcolor; top:0;"><path d="M4 4 H8 V14 L28 4 V28 L8 18 V28 H4 z "></path></svg>
       </button>
       <button class="flex-none h1 button button-transparent button-grow rounded"
         title="Play/Pause"
         ng-click="playPause(index)">
-        <svg ng-if="player.playing !== track.src" class="icon geomicon" data-icon="play" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor"><path d="M4 4 L28 16 L4 28 z "></path></svg>
-        <svg ng-if="player.playing === track.src" class="icon geomicon" data-icon="pause" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor"><path d="M4 4 H12 V28 H4 z M20 4 H28 V28 H20 z "></path></svg>
+        <svg ng-if="player.playing !== track.src" class="icon geomicon" data-icon="play" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor; top:0;"><path d="M4 4 L28 16 L4 28 z "></path></svg>
+        <svg ng-if="player.playing === track.src" class="icon geomicon" data-icon="pause" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor; top:0;"><path d="M4 4 H12 V28 H4 z M20 4 H28 V28 H20 z "></path></svg>
       </button>
       <button class="flex-none h3 button mr2 button-narrow button-transparent button-grow rounded"
         title="Play Next Track"
         ng-click="next()">
-        <svg class="icon geomicon" data-icon="next" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 L24 14 V4 H28 V28 H24 V18 L4 28 z "></path></svg>
+        <svg class="icon geomicon" data-icon="next" viewBox="0 0 32 32" style="fill:currentcolor; top:0;"><path d="M4 4 L24 14 V4 H28 V28 H24 V18 L4 28 z "></path></svg>
       </button>
       <progress
         class="progress"
@@ -59,7 +64,7 @@
       </button>
     </div>
   </div>
-  <ul class="list-reset" style="max-height: 300px; overflow-y: scroll;">
+  <ul class="list-reset" style="max-height: 400px; overflow-y: scroll;">
     <li ng-repeat="track in tracks" ng-if="track.duration < 300000">
       <button
         class="flex flex-center full-width left-align button button-transparent"
