removed overflow rule from body

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script type="text/javascript" src="app.js"></script>
 	
 </head>
-<body ng-app="streetsounds" style="overflow-y: hidden;">
+<body ng-app="streetsounds">
 <div plangular class="mb3 rounded">
   <div class="p2 bg-black white">
   	<div class="flex flex-center">
